--- a/笔记/4.基本数据结构一.md
+++ b/笔记/4.基本数据结构一.md
@@ -23,7 +23,31 @@
    - Stack()创建 -个空的新栈。它不需要参数，并返回一个空栈
    - push(item)将一 个新项添加到栈的顶部，它需要item做参数并不返回任何内容
    - pop()从栈中删除顶部项。它不需要参数并返回item。栈被修改
-   - peek()从栈返回顶部项，但不会删除它。不需要参数。不修改栈
+   - peek()从栈中返回顶部项，但不会删除它。不需要参数。不修改栈
    - isEmpty() 测试栈是否为空。不需要参数，返回布尔值
    - size()返回栈 中的item数量。不需要参数，返回一个整数
+   
+4. **pythonds**
+
+   from pythonds.basic.stack import Stack
+
+## 栈练习一：() 匹配
+
+1. (1+2)*(3+4)/(5+6) 计算机
+
+   最近开始的符号必须与下一个关闭符号相匹配。
+
+   处理的第一个开始符号必须等待直到其匹配最后一个符号
+
+   结束符号以相反的顺序匹配开始符号
+
+2. 算法实现
+
+   从空栈开始, 从左到右处理括号字符串. 如果一个符号是一个开始符号,将其作为一个信号, 与之对应的结束符号稍后会出现。
+
+   如果符号是结束符号,弹出栈,只要弹出栈的开始符号可以匹配每个结束符号, 则保持匹配状态. 如果任何时候栈上没有数显符合开始符号的结束符号, 则字符串不匹配. 
+
+   当所有的符号都被处理后, 栈是空的才可以. 
+
+## 栈练习二：{[()]}匹配
 
