--- a/笔记/递归.md
+++ b/笔记/递归.md
@@ -2,17 +2,53 @@
 
 递归是一种解决问题的方法，将问题分解为更小的子问题，直到得到-一个足够小的问题可以被很简单的解决。
 
-
-
-
+通常递归涉及函数调用自身。
 
 ## 二、整数列表的和
 
+```
+def listSum(numList):  # 递归函数
+    if len(numList) == 1:
+        return numList[0]
+    return numList[0] + listSum(numList[1:])
 
 
-
-
-
+listSum2([1, 3, 5, 7, 9])
+= 1 + listSum2([1, 3, 5, 7, 9])
+      = 3 + listSum2([5, 7, 9])
+            = 5 + listSum2([7, 9])
+                  = 7 + listSum2([9])
+                        = 9---这里是最深处--条件不满足,没有再次调用自身 ↓
+                  = 16|(7+9)  ↓←———————————————————————————————————
+            = 21|(5+16) ↓←————
+      = 24|(3+21) ↓←————
+= 25|(1+24) ↓←————
+```
 
 ## 三、递归的三大定律
 
+1. 递归算法必须具有基本情况:基本情况是算法停止递归的条件。
+
+   通常是足够小，可以直接求解的问题。
+
+   在整数列表的和中，基本情况是长度为1的列表
+
+2. 递归算法必须改变其状态并向基本情况靠近
+
+3. 递归算法必须以递归方式调用自身
+
+## 四、练习
+
+1. 整数转换成任意进制字符串
+
+   769  = 0b1100000001
+
+   ​		= 0x301
+
+   str1 = '0123456789ABCDEP'   str1[7] + str1[6]+ str1[9]
+
+   
+
+   769/10  得到76,  余9
+
+   76/10  得到7,  余6
