--- a/笔记/排序与搜索.md
+++ b/笔记/排序与搜索.md
@@ -169,3 +169,22 @@ item in [1.,2,3.4]
 
 
 6. 归并排序
+
+   1. 申请空间，使其大小为两个已经排序序列之和，该空间用来存放合并后的序列；
+   2. 设定两个指针，最初位置分别为两个已经排序序列的起始位置；
+   3. 比较两个指针所指向的元素，选择相对小的元素放入到合并空间，并移动指针到下一位置；
+   4. 重复步骤 3 直到某一指针达到序列尾；
+   5. 将另一序列剩下的所有元素直接复制到合并序列尾。
+
+   归并排序是一种递归算法, 不断将列表拆分为一半. 知道列表为空或只有一个元素合井分割
+
+   [54,26,93,17,77,31,44,55,20]
+
+7. 快速排序
+
+   1. 从数列中挑出一个元素，称为 “基准”（pivot）;
+   2. 重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面（相同的数可以到任一边）。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；
+   3. 递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序；
+
+   
+
