--- a/笔记/排序与搜索.md
+++ b/笔记/排序与搜索.md
@@ -188,3 +188,18 @@ item in [1.,2,3.4]
 
    
 
+## 三、总结
+
+1. 对于有序或者无序列表，顺序搜索的时间复杂度是: O(n)
+
+2. 在最坏的情况下，有序列表的二分查找时间复杂度是: 0Ologn)
+
+3. 哈希表可以提供恒定时间搜索
+
+4. 冒泡排序，选择排序和插入排序，时间复杂度0(n^2)
+
+5. 希尔排序通过排序增量子列表来改进插入排序，它落在O(n)和O(n^2)之间
+
+6. 归并排序O(nlogn),但是合并过程需要增加额外的空间
+
+7. 快速排序O(nlogn),但如果分割点不在列表中间附近，可能会降到0(n^2), 它不需要额外空间
