--- a/笔记/树和树的算法.md
+++ b/笔记/树和树的算法.md
@@ -18,9 +18,16 @@
 
 **定义一: 树由一组节点和一组连接节点的边组成**
 树具有以下属性:
-    * 树的一个节点被指定为根节点
-    * 除了根节点之外, 每个节点n通过一个节点p的边连接, 其中p是n的父节点
-    * 从根路径遍历到每个节点路径唯一
-    * 如果树中的每个节点最多有两个子节点, 我们说该树是一个**二叉树**
+* 树的一个节点被指定为根节点
+* 除了根节点之外, 每个节点n通过一个节点p的边连接, 其中p是n的父节点
+* 从根路径遍历到每个节点路径唯一
+* 如果树中的每个节点最多有两个子节点, 我们说该树是一个**二叉树**
+
 **定义二: 树是空的, 或者由一个跟节点和零个或多个子树组成, 每个子树也是一颗树. 每个子树的根节点通过边连接到父树的根节点(树的递归定义)**
-a = [[b, [d, e]], [c, [f]]]
+
+## 三、节点表示
+
+
+
+## 四、分析树
+
