--- a/笔记/树和树的算法.md
+++ b/笔记/树和树的算法.md
@@ -30,4 +30,21 @@
 
 
 ## 四、分析树
+**分析树可以用于表示诸如句子或数学表达式的真是世界构造. **
+((7+3)*(5-2))
+构建分析树的步骤:
+1. 将表达式字符串拆分成符号列表吗左括号, 右括号, 运算符和操作数
+2. 每次读到一个左括号, 就开始一个新的表达式
+3. 每次读到一个右括号, 完成一个表达式
+4. 操作数是叶节点, 同时是操作符的子节点
+5. 每个操作符都有左孩子和右孩子
 
+构建分析树的规则:
+1. 如果当前符号是 '('. 添加一个新节点作为当前节点的左子节点, 并下降到左子节点
+2. 如果当前符号在 + - * / 中, 将当前节点的根值设置为由当前符号表示的运算符, 添加一个新节点作为当且节点的右子节点, 并下降到右子节点
+3. 如果当前符号是数字, 将当前节点的根值设置为数字并返回到父节点
+4, 如果当前符号是 ')', 则转到当前节点的父节点
+
+
+(3 + (4*5))
+[(, 3, +, (, 4, *, 5, ), )]
