--- a/笔记/树和树的算法.md
+++ b/笔记/树和树的算法.md
@@ -48,3 +48,13 @@
 
 (3 + (4*5))
 [(, 3, +, (, 4, *, 5, ), )]
+
+## 五、树的遍历
+访问数的节点的方式, 有三种模式可以用来访问树中的所有节点. 这三种模式的差别是每个节点被访问的顺序. 我们称这种访问节点的方式为"遍历"
+1. 前序: 首先访问根节点, 然后递归地做左侧子树的前序遍历, 随后是右侧子树的递归前序遍历
+
+2. 中序: 递归地树对左子树进行一次遍历, 访问根节点, 最后递归遍历右子树
+
+3. 后序: 递归地对左子树和右子进行后续遍历, 然后访问根节点
+
+
