测试图类和顶点类

--- a/笔记/图.md
+++ b/笔记/图.md
@@ -25,7 +25,7 @@ E = {(v0,v1,5),(v1,v2,4),(v2,v3,9),(v3,v4,7),(v4,v0,1),(v0,v5,2)(v5,v4,8),(v3,v5
 
 |      |   v0   |   v1   |   v2   |   v3   |   v4   |   v5   |
 | :--: | :--: | :--: | :--: | :--: | :--: | :--: |
-|   v0   |      | 5 |      |      |      |      |
+|   v0   |      | 5 |      |      |      | 2 |
 |   v1   |      |      | 4 |      |      |      |
 |   v2   |      |      |      | 9 |      |      |
 |   v3   |      |      |      |      | 7 | 3 |
@@ -38,7 +38,7 @@ E = {(v0,v1,5),(v1,v2,4),(v2,v3,9),(v3,v4,7),(v4,v0,1),(v0,v5,2)(v5,v4,8),(v3,v5
 
 利用空间更高效的方式, 字典表示顶点的关系, 字典的键表示顶点, 值表示权重
 
-| v0 | id = 'V0' adj = {V1:5} |
+| v0 | id = 'V0' adj = {V1:5, V5:2} |
 | :--: | :--- |
 |   v1   | id = 'V1' adj = {V2:4} |
 | v2 | id = 'V2' adj = {V3:9} |
